# openclaw_yolo

./: .editorconfig  .gitattributes  .gitignore  README.md  openclaw_yolo_state.sqlite.bak-20260423-151915  pyproject.toml  requirements-dev.txt  requirements.txt  start-bridge.bat  start-bridge.ps1  start-frontend.bat  start-http-client.sh  stop-bridge.bat  stop-bridge.ps1  stop-frontend.bat  路线设计.md
.openclaw_yolo/: state.sqlite-journal
docs/: frontend-gemini-brief.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ConfirmDialog.tsx  CreateExperimentDialog.tsx  DeleteDialog.tsx  ExperimentCurvesDialog.tsx  ExperimentList.tsx  ImageGallery.tsx  LocalTrialDialog.tsx  ParameterEditor.tsx  RemoteTrialDialog.tsx  TrialComparisonTable.tsx  TrialSummaryDrawer.tsx  Workspace.tsx
skills/openclaw-yolo-agent/: SKILL.md
skills/openclaw-yolo-agent/agents/: openai.yaml
skills/openclaw-yolo-agent/references/: commands.md  constraints.md
src/openclaw_yolo/: constants.py  models.py  service.py  utils.py
src/openclaw_yolo/cli/: main.py
src/openclaw_yolo/core/: analyzer.py  baseline.py  constraints.py  dataset.py  llm_adapter.py  param_search.py  train_worker.py  trainer.py
src/openclaw_yolo/db/: repository.py
src/openclaw_yolo_bridge/: app.py  jobs.py  runner.py
tests/: test_experiment_manager.py
