[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-yolo"
version = "0.1.0"
description = "OpenClaw-driven YOLO training orchestrator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.110,<1", "uvicorn>=0.29,<1"]

[project.scripts]
openclaw-yolo = "openclaw_yolo.cli.main:main"
openclaw-yolo-bridge = "openclaw_yolo_bridge.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
